# raytracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MatrixTest.cpp  README.md  RayTracer.cpp
RaytracerGUI/: RayTracer.exe.stackdump  build.xml
RaytracerGUI/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
RaytracerGUI/nbproject/private/: private.properties
RaytracerGUI/src/raytracergui/: FileSelect.form  FileSelect.java  MainWindow.form  MainWindow.java  RaytracerGUI.java
sceneFiles/more scenes/: 1. gun.xml  1. slenderCave.xml  MinecraftEnvironmentSphere.xml  amethyst.xml  amethyst2.xml  amethystDielectric.xml  amethystFullDielectric.xml  amethystsphere.xml  canyon.xml  causticTest.xml  cave.xml  creeperEntrance.xml  cube.xml  dielectricPortalMultireflection.xml  endertest.xml  metallicCreepers.xml  minecraftDiamondArea.xml  minecraftDiamondsphere.xml  minecraftLibrary.xml  tardis.xml
shared/cs57s1Lib/cs5721GraphicsLib/: CMakeLists.txt
shared/cs57s1Lib/cs5721GraphicsLib/src/: Makefile  Vector3D.h  cmake_install.cmake  handleGraphicsArgs.cpp  handleGraphicsArgs.h
shared/cs57s1Lib/cs5721GraphicsLib/src/png++/: config.hpp
shared/cs57s1Lib/cs5721GraphicsLib/tests/: CMakeLists.txt  boostThreadExample.cpp  test_XMLSceneParse.cpp  test_boostPropTreeReader.cpp  test_fishEyeGen.cpp
shared/cs57s1Lib/cs5721GraphicsLib/utests/: CMakeLists.txt  utest_Vector3D.cpp
src/: AreaLight.cpp  AreaLight.h  Basis.cpp  Basis.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  HitStruct.cpp  HitStruct.h  Light.h  LightMap.cpp  LightMap.h  Makefile  Matrix4x4.cpp  Matrix4x4.h  Ray.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  TextureMap.h  XMLContainerClass.cpp  XMLContainerClass.h  cmake_install.cmake  nanoflann.hpp
src/cameras/: OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  SphereCamera.cpp  SphereCamera.h
src/shaders/: BlinnPhongShader.cpp  BlinnPhongShader.h  CombinationShader.cpp  CombinationShader.h  DielectricShader.cpp  DielectricShader.h  FlatShader.h  LambertianShader.cpp  LambertianShader.h  MultiReflectionShader.cpp  MultiReflectionShader.h  NormalMapShader.cpp  NormalMapShader.h  PhongShader.cpp  PhongShader.h  PortalShader.cpp  PortalShader.h
src/shapes/: Box.cpp  Box.h  InstancedObject.cpp  InstancedObject.h  Mesh.cpp  Mesh.h  ShapeContainer.cpp  ShapeContainer.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/textures/: FlatTexture.h  ImageTexture.cpp  ImageTexture.h  MarbleTexture.cpp  MarbleTexture.h  PerlinNoiseTexture.cpp  PerlinNoiseTexture.h  TextureCalculator.cpp  TextureCalculator.h
